--- a/newlib/Makefile
+++ b/newlib/Makefile
@@ -1,5 +1,7 @@
 NEWLIB_VERSION ?= 4.1.0
 
+OUT_SUFFIX ?= out
+
 all: rebuild-newlib
 
 newlib-$(NEWLIB_VERSION).tar.gz:
@@ -11,21 +13,25 @@ newlib-$(NEWLIB_VERSION): newlib-$(NEWLIB_VERSION).tar.gz
 	@tar -xzf $<
 	@touch $@ # Touch so directory appears newer than tarball
 
-rebuild-newlib: newlib-$(NEWLIB_VERSION)
+rebuild-newlib-arm: newlib-$(NEWLIB_VERSION)
 	@echo ""
 	@echo "=== BEGINNING ARM BUILD =========================="
 	@echo ""
-	@rm -rf newlib-arm-$(NEWLIB_VERSION)-out
-	@mkdir -p newlib-arm-$(NEWLIB_VERSION)-out
-	@echo "Entering directory newlib-arm-$(NEWLIB_VERSION)-out"
-	cd newlib-arm-$(NEWLIB_VERSION)-out; sh ../build-arm.sh ../$<
-	cd newlib-arm-$(NEWLIB_VERSION)-out/arm-none-eabi/thumb/v6-m/nofp/newlib; cp libc.a libm.a ../../../../../../cortex-m/v6-m
-	cd newlib-arm-$(NEWLIB_VERSION)-out/arm-none-eabi/thumb/v7-m/nofp/newlib; cp libc.a libm.a ../../../../../../cortex-m/v7-m
-	cd newlib-arm-$(NEWLIB_VERSION)-out/arm-none-eabi/thumb/v7e-m/nofp/newlib; cp libc.a libm.a ../../../../../../cortex-m/v7e-m
+	@rm -rf newlib-arm-$(NEWLIB_VERSION)-$(OUT_SUFFIX)
+	@mkdir -p newlib-arm-$(NEWLIB_VERSION)-$(OUT_SUFFIX)
+	@echo "Entering directory newlib-arm-$(NEWLIB_VERSION)-$(OUT_SUFFIX)"
+	cd newlib-arm-$(NEWLIB_VERSION)-$(OUT_SUFFIX); sh ../build-arm.sh ../$<
+	cd newlib-arm-$(NEWLIB_VERSION)-$(OUT_SUFFIX)/arm-none-eabi/thumb/v6-m/nofp/newlib; cp libc.a libm.a ../../../../../../cortex-m/v6-m
+	cd newlib-arm-$(NEWLIB_VERSION)-$(OUT_SUFFIX)/arm-none-eabi/thumb/v7-m/nofp/newlib; cp libc.a libm.a ../../../../../../cortex-m/v7-m
+	cd newlib-arm-$(NEWLIB_VERSION)-$(OUT_SUFFIX)/arm-none-eabi/thumb/v7e-m/nofp/newlib; cp libc.a libm.a ../../../../../../cortex-m/v7e-m
+
+rebuild-newlib-rv32: newlib-$(NEWLIB_VERSION)
 	@echo ""
 	@echo "=== BEGINNING RISC-V BUILD =========================="
 	@echo ""
-	@rm -rf newlib-riscv-$(NEWLIB_VERSION)-out
-	@mkdir -p newlib-riscv-$(NEWLIB_VERSION)-out
-	@echo "Entering directory newlib-riscv-$(NEWLIB_VERSION)-out"
-	cd newlib-riscv-$(NEWLIB_VERSION)-out; sh ../build-riscv.sh ../$<
+	@rm -rf newlib-riscv-$(NEWLIB_VERSION)-$(OUT_SUFFIX)
+	@mkdir -p newlib-riscv-$(NEWLIB_VERSION)-$(OUT_SUFFIX)
+	@echo "Entering directory newlib-riscv-$(NEWLIB_VERSION)-$(OUT_SUFFIX)"
+	cd newlib-riscv-$(NEWLIB_VERSION)-$(OUT_SUFFIX); sh ../build-riscv.sh ../$<
+
+rebuild-newlib: rebuild-newlib-arm rebuild-newlib-rv32
